<resources>
    <string name="app_name">Section3</string>
    <string name="correct_email">test@doselect.com</string>
    <string name = "correct_password">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
